--- a/src/components/mediaquery.css
+++ b/src/components/mediaquery.css
@@ -6,9 +6,16 @@
     align-items: center;
     width: 100%;
 }
-@media screen and (max-width:560px) {
+.card{
+    height: 70%;
+}
+@media screen and (max-width:480px) {
     .BtnWrapper{
         flex-direction:column;
+    }
+    .card{
+        height: 100%;
+
     }
     
 }
